<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo">


    <ImageView
        android:layout_width="155sp"
        android:layout_height="155sp"
        android:background="@drawable/iconosalud"
        android:id="@+id/imageView"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:background="@drawable/trans_border_style"
            android:padding="5sp"
            android:textStyle="normal"
            android:layout_marginBottom="5sp"
            android:alpha="0.6"
            android:textColorHint="@color/colorNegro"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/trans_border_style"
            android:padding="5sp"
            android:textStyle="normal"
            android:alpha="0.6"
            android:textColorHint="@color/colorNegro"
            android:focusableInTouchMode="true"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/iniciarsession"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="9dp"
            android:background="@drawable/blanco_post_border_style"
            android:inputType="textCapCharacters"
            android:onClick="validar"
            android:text="@string/iniciarsesiion"
            android:textColor="@color/colorFondo"
            android:textStyle="bold" />



        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_gmail"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/olvidastespasswor"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorTransparente"
            android:inputType="textCapCharacters"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorTransparente"
            android:text="@string/notienecuenta"
            android:gravity="center"
            android:textSize="12sp"
            android:inputType="textCapCharacters"
            android:onClick="registrarse"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:visibility="gone"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />


</RelativeLayout>

