<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    android:padding="@dimen/appbar_padding"
    android:id="@+id/mRlView">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout

            android:padding="@dimen/loginViewsMargin"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/registrarUsuario"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:paddingBottom="5sp"/>



            <ImageView
                android:id="@+id/camara1"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/perfilfoto"
                 />

            <TextView
                android:id="@+id/txt_camara1"
                style="@style/headerTextPrimary"
                android:layout_height="wrap_content"
                android:text="Cargar foto"
                android:clickable="true"
                android:textColor="@color/colorBlanco" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="29dp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:id="@+id/linearLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/trans_border_style"
                    android:padding="5sp"
                    android:textStyle="normal"
                    android:layout_marginBottom="5sp"
                    android:alpha="0.6"
                    android:textColorHint="@color/colorNegro"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/trans_border_style"
                    android:padding="5sp"
                    android:textStyle="normal"
                    android:alpha="0.6"
                    android:textColorHint="@color/colorNegro"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/iniciarsession"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/blanco_post_border_style"
                    android:inputType="textCapCharacters"
                    android:text="Registrar"
                    android:textColor="@color/colorFondo"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


